2009-04-10 15:30-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSApplication.m: Follow the NSApplication responder
	chain.

2009-04-10 15:00-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSSplitView.m: Set subviews to resize when loaded from 
	the nib. 
	* Source/NSView.m: Partial revert of previous change.

2009-04-10 14:27-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSView.m: Autoresize subviews since it is not pulling it
	from the nib correctly.  Will come back and fix this issue.

2009-04-10 14:05-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSSplitView.m: Autoresize subviews when loaded from the nib.

2009-04-10 14:03-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSTabView.m: Autoresize subviews when loaded from the nib
	and set the mask to the make height and width resizable when the
	tab is selected.

2009-04-10 13:31-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSDrawer.m: Correction for NSDrawer issues with draw
	temporarily showing up above the window and not syncing with
	window position.

2009-04-10 10:24-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSAlert.m: in the method _initWithoutGModel add a call
	to setLevel: to set the level to NSModalPanelWindowLevel.   This was
	not previously being done and was causing alert panels to get lost 
	behind other application windows.

2009-04-10 01:32-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSMenuView.m: Removed adjustment to Y coords in the
	setWindowFrame... method.  This adjustment is only supposed to be
	done when a popup is under "restrictive screen conditions" which
	is currently unimplemented.

2009-04-10 01:15-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSMenuView.m: In the method
	- (void) setWindowFrameForAttachingToRect:... test if the view
	is flipped and make the adjustment.
	