@@ -1,3 +1,9 @@
+2009-04-11 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/NSPopUpButtonCell.m (-_popUpItemAction:): New method used
+	by Apple NIB files.
+	Patch by Doug Simons <doug@riverrock.org>.
+
 2009-04-10 15:30-EDT Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Source/NSApplication.m: Follow the NSApplication responder
